--- a/test_oa_project/www/Templets/System/Statistics/mymarket.html
+++ b/test_oa_project/www/Templets/System/Statistics/mymarket.html
@@ -33,7 +33,13 @@
 									<img src="__PUBLIC__/images/personalInfo_01-01.jpg">
 								</if>
 							</div>
-		        			<span>{$systemUserInfo['realname']}({$systemUserInfo['role_names']})</span>
+		        			<span>{$systemUserInfo['realname']}</span>
+		        			<select class="search-position">
+		        				<option value="0" selected="selected">121</option>
+		        				<option value="1">asda</option>
+		        				<option value="2">asda</option>
+		        				<option value="3">asda</option>
+		        			</select>
 		        		</div>
 
 						<!-- 日期 -->
