--- a/www/Templets/System/Statistics/mymarket.html
+++ b/www/Templets/System/Statistics/mymarket.html
@@ -33,13 +33,15 @@
 									<img src="__PUBLIC__/images/personalInfo_01-01.jpg">
 								</if>
 							</div>
-		        			<span>{$systemUserInfo['realname']}</span>
-		        			<select class="search-position">
-		        				<option value="0" selected="selected">121</option>
-		        				<option value="1">asda</option>
-		        				<option value="2">asda</option>
-		        				<option value="3">asda</option>
-		        			</select>
+		        			<div class="search_name">{$systemUserInfo['realname']}
+		        				<select class="search-position">
+			        				<option value="0" selected="selected">121</option>
+			        				<option value="1">asda</option>
+			        				<option value="2">asda</option>
+			        				<option value="3">asda</option>
+			        			</select>
+		        			</div>
+		        			
 		        		</div>
 
 						<!-- 日期 -->
