--- a/www/Templets/System/Statistics/market.html
+++ b/www/Templets/System/Statistics/market.html
@@ -272,7 +272,7 @@
 								{{# }); }}
 								<td>
 									{{# if(v.system_user_id!=0){ }}
-									<a target="_blank" href="{:U('System/Statistics/mymarket')}?system_user_id={{ v.system_user_id }}&logtime={{= $.getUrlParam('logtime') }}">详情</a>
+									<a target="_blank" href="{:U('System/Statistics/mymarket')}?system_user_id={{ v.system_user_id }}&role_id={{= $.getUrlParam('role_id') }}&logtime={{= $.getUrlParam('logtime') }}">详情</a>
 									{{# } }}
 								</td>
 							</tr>
