--- a/www/Templets/System/Statistics/mymarket.html
+++ b/www/Templets/System/Statistics/mymarket.html
@@ -209,9 +209,9 @@
 				<div class="tab-container">
 					<table cellpadding="0" cellspacing="0"  id="sr_everyday">
 						<tr>
-							<th><div class="container clearfix"><span>统计时间</span><i class="on_btn"></i></div></th>
+							<th><div class="container"><span>统计时间<i class="on_btn"></i></span></div></th>
 							{{# layui.each(d.statistics, function(k, v){ }}
-							<th><div class="container clearfix"><span>{{ v.name }}</span><i class="on_btn"></i></div></th>
+							<th><div class="container"><span>{{ v.name }}<i class="on_btn"></i></span></div></th>
 							{{# }); }}
 						</tr>
 						<tr class="sr_total">
