--- a/test_oa_project/www/Templets/System/Management/taskList.html
+++ b/test_oa_project/www/Templets/System/Management/taskList.html
@@ -8,9 +8,6 @@
 		<title>系统首页-{$siteinfo.sitename}</title>
 		<link rel="stylesheet" href="__PUBLIC__/css/common.css">
 		<link rel="stylesheet" href="__PUBLIC__/css/taskList.css">
-		<script>
-	        var jump_code = "{$jump_code}";
-	    </script>
 	</head>
 	<body>
 		<div class="wrapper-box">
@@ -19,7 +16,7 @@
 	            	<span class="title-text">首页内容设置</span>
 	            </div>
 	            <div class="title-right fr clearfix">
-	            	<a href="javascript:;" class="return">添加部门内容</a>
+	            	<a href="{:u('System/Management/taskAdd')}" class="return">添加部门内容</a>
 	            </div>
 	        </div>
 	        
