--- a/test_oa_project/www/Templets/System/Statistics/market.html
+++ b/test_oa_project/www/Templets/System/Statistics/market.html
@@ -17,7 +17,7 @@
 	            	<span class="title_text">营销统计管理</span>
 	            </div>
 	            <div class="title_right fr clearfix">
-	            	<a href="{:U('System/Statistics/marketSetAdd')}" class="setup_btn">公式测试入口</a>
+	            	<!--<a href="{:U('System/Statistics/marketSetAdd')}" class="setup_btn">公式测试入口</a>-->
 	            	<a href="{:U('System/Statistics/marketStandard')}" class="return">设置合格标准</a>
 	            	<!--<a href="javascript:;" class="export_btn">导出数据</a>-->
 	            </div>
