--- a/test_oa_project/www/Templets/System/Index/main.html
+++ b/test_oa_project/www/Templets/System/Index/main.html
@@ -32,7 +32,7 @@
     <div class="shortcutButton">
         <div class="sbTop clearfix">
             <span>快捷按钮</span>
-            <i title="自定义快捷按钮">···</i>
+            <i title="自定义快捷按钮">设置</i>
         </div>
         <div class="sbCont">
             <div class="sbContBd">
@@ -46,7 +46,47 @@
             </div>
         </div>
     </div>
-
+	
+	<div class="statistics-show">
+		<div class="show-top clearfix">
+			<div class="top-left">
+				<span class="left-name">客户量汇总统计</span>
+				<p>
+					<span>2016/11/07</span>
+					<span>至</span>
+					<span>2016/11/13</span>
+				</p>	
+			</div>
+			<div class="top-right">更多>></div>
+		</div>
+		<table cellpadding="0" cellspacing="0" id="show_tabele">
+			<tr>
+				<th>新增量</th>
+				<th>分配量</th>
+				<th>出库量</th>
+				<th>到访量</th>
+				<th>订单量</th>
+				<th>退款量</th>
+				<th>到访率</th>
+				<th>成交率</th>
+				<th>退款率</th>
+				<th>总转率</th>
+			</tr>
+			<tr>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0%</td>
+				<td>0%</td>
+				<td>0%</td>
+				<td>0%</td>
+			</tr>
+		</table>
+	</div>
+	
     <div class="msgBox clearfix">
         <!-- <div class="systemUpdate">
             <div class="msgBoxTop clearfix">
