--- a/test_oa_project/www/Templets/System/Management/taskAdd.html
+++ b/test_oa_project/www/Templets/System/Management/taskAdd.html
@@ -36,6 +36,12 @@
 
 	        		</div>
 	        	</div>
+	        	<div class="taskadd-rows clearfix">
+	        		<div class="rows-left">&nbsp;</div>
+	        		<div class="rows-right">
+						<input type="button" class="taskadd-submit" value="提交" />
+	        		</div>
+	        	</div>
 	        </div>
 	    </div>
 		<!-- 部门列表-->
