--- a/test_oa_project/www/Templets/System/Statistics/marketSetAdd.html
+++ b/test_oa_project/www/Templets/System/Statistics/marketSetAdd.html
@@ -53,7 +53,7 @@
 	        		<div class="row-left singlelist-height"><i>&#42</i>统计单项：</div>
 	        		<div class="row-right singlelist-height">
 	        			<!-- 已设置好的一列统计单项s -->
-	        			<!--<div class="single-list clearfix">
+	        			<div class="single-list clearfix">
 	        				<div class="default-list clearfix">
 	        					<div class="list-left">统计单项：出库量</div>
 	        					<div class="list-right">
@@ -191,7 +191,7 @@
 	        			<div class="add-row">
 	        				<i></i>
 	        				<span>新增统计单项</span>
-	        			</div>-->
+	        			</div>
 	        			<!-- 已设置好的一列统计单项e -->
 	        			
 	        			<!-- 新增或编辑 统计单项s   -->
